ingress/gateway-rilb/gateway-rilb.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: internal-http
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: internal-route
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
  rules:
  - matches:
    - path:
        value: /*
    backendRefs:
    - name: web1
      port: 8080
  - matches:
    - path:
        value: /v2/*
    backendRefs:
    - name: web2
      port: 8080
  - matches:
    - path:
        value: /v3/*
    backendRefs:
    - name: web3
      port: 8080
  - matches:
    - path:
        value: /v4/*
    backendRefs:
    - name: web4
      port: 8080
  - matches:
    - path:
        value: /v5/*
    backendRefs:
    - name: web5
      port: 8080
  - matches:
    - path:
        value: /v6/*
    backendRefs:
    - name: web6
      port: 8080
  - matches:
    - path:
        value: /v7/*
    backendRefs:
    - name: web7
      port: 8080
  - matches:
    - path:
        value: /v8/*
    backendRefs:
    - name: web8
      port: 8080
